--- a/app/src/main/resources/overlay/gradle.properties
+++ b/app/src/main/resources/overlay/gradle.properties
@@ -29,6 +29,11 @@ gradleMavenPluginVersion=5.2.1
 gradleLombokPluginVersion=5.2.1
 gradleDependencyManagementPluginVersion=1.0.10.RELEASE
 
+# Location to generate keystore
+certDir=/etc/cas
+serverKeystore=thekeystore
+exportedServerCert=cas.crt
+
 # Use without "-slim" in tag name if you want tools like jstack, adds about 100MB to image size
 # (https://hub.docker.com/r/adoptopenjdk/openjdk11/tags/)
 baseDockerImage=adoptopenjdk/openjdk11:alpine-jre
